<resources>

    <!-- application start -->
    <string name="app_name">WiFiDetector</string>
    <!-- application end -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_access_points">Access Points</string>
    <string name="action_channel_rating">Channel Rating</string>
    <string name="action_channel_graph">Channel Graph</string>
    <string name="action_time_graph">Time Graph</string>
    <string name="action_channel_available">Available Channels</string>
    <string name="action_vendors">Vendors</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="button_ok" translatable="false">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="no_data">No Data</string>

    <string name="channel_rating_best">Best Channels:</string>
    <string name="channel_rating_best_none">None</string>
    <string name="channel_rating_best_alternative">, try alternative WiFi Band</string>
    <string name="channel_rating_heading_rating">Channel Rating</string>
    <string name="channel_rating_heading_number">Channel Number</string>
    <string name="channel_rating_heading_count">Access Point Count</string>
    <string name="channel_short_name">CH</string>

    <string name="graph_channel_axis_x">WiFi Channels</string>
    <string name="graph_time_axis_x">Scan Count</string>
    <string name="graph_axis_y">Signal Strength (dBm)</string>

    <!-- settings start -->
    <string name="start_menu_title">Start</string>
    <string name="start_menu_summary" translatable="false">%s</string>
    <string name="start_menu_key" translatable="false">start_menu</string>

    <string name="country_code_title">Country</string>
    <string name="country_code_summary" translatable="false">%s</string>
    <string name="country_code_key" translatable="false">country_code</string>

    <string name="wifi_band_title">WiFi Band</string>
    <string name="wifi_band_summary" translatable="false">%s</string>
    <string name="wifi_band_key" translatable="false">wifi_band</string>
    <string name="wifi_band_default" translatable="false">0</string>

    <string name="scan_interval_title">Scan Interval</string>
    <string name="scan_interval_summary">%d seconds between each scan</string>
    <string name="scan_interval_key" translatable="false">scan_interval</string>
    <integer name="scan_interval_min" translatable="false">1</integer>
    <integer name="scan_interval_max" translatable="false">30</integer>
    <integer name="scan_interval_default" translatable="false">10</integer>

    <string name="sort_by_title">Sort Access Points By</string>
    <string name="sort_by_summary" translatable="false">%s</string>
    <string name="sort_by_key" translatable="false">sort_by</string>
    <string name="sort_by_default" translatable="false">0</string>

    <string name="group_by_title">Group Access Points By</string>
    <string name="group_by_summary" translatable="false">%s</string>
    <string name="group_by_key" translatable="false">group_by</string>
    <string name="group_by_default" translatable="false">0</string>

    <string name="channel_graph_legend_title">Channel Graph Legend Display</string>
    <string name="channel_graph_legend_summary" translatable="false">%s</string>
    <string name="channel_graph_legend_key" translatable="false">channel_graph_legend</string>
    <string name="channel_graph_legend_default" translatable="false">2</string>

    <string name="time_graph_legend_title">Time Graph Legend Display</string>
    <string name="time_graph_legend_summary" translatable="false">%s</string>
    <string name="time_graph_legend_key" translatable="false">time_graph_legend</string>
    <string name="time_graph_legend_default" translatable="false">0</string>

    <string name="theme_title">Theme</string>
    <string name="theme_summary" translatable="false">%s</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_default" translatable="false">0</string>
    <!-- settings end -->

    <!-- about start -->
    <string name="about_license_title">License:</string>
    <string name="about_license_name">Licensed under the GNU GPLv3</string>
    <string name="about_license_url" translatable="false">http://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_description_title">Description:</string>
    <string name="about_description_text">Optimize your WiFi network, by checking WiFi network status, signal strength and identifying crowded channels using an open-source WiFi Analyzer for Android</string>
    <string name="about_libraries_title">Libraries Used:</string>
    <string name="about_library_apache" translatable="false">Apache Commons</string>
    <string name="about_library_apache_url" translatable="false">https://commons.apache.org</string>
    <string name="about_library_graph_view">Graph View</string>
    <string name="about_library_graph_view_url" translatable="false">http://www.android-graphview.org</string>
    <string name="about_library_material">Material Design Icons</string>
    <string name="about_library_material_url" translatable="false">https://design.google.com/icons</string>
    <string name="about_contributor_title">Contributors:</string>
    <!-- about end -->
</resources>
