<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/wifi_band_default"
        android:entries="@array/wifi_band_array"
        android:entryValues="@array/wifi_band_index_array"
        android:key="@string/wifi_band_key"
        android:persistent="true"
        android:summary="@string/wifi_band_summary"
        android:title="@string/wifi_band_title"/>

    <chainn.com.wifidetector.settings.ScanIntervalPreference
        android:defaultValue="@integer/scan_interval_default"
        android:key="@string/scan_interval_key"
        android:persistent="true"
        android:summary="@string/scan_interval_summary"
        android:title="@string/scan_interval_title"/>

    <ListPreference
        android:defaultValue="@string/sort_by_default"
        android:entries="@array/sort_by_array"
        android:entryValues="@array/sort_by_index_array"
        android:key="@string/sort_by_key"
        android:persistent="true"
        android:summary="@string/sort_by_summary"
        android:title="@string/sort_by_title"/>

    <ListPreference
        android:defaultValue="@string/group_by_default"
        android:entries="@array/group_by_array"
        android:entryValues="@array/group_by_index_array"
        android:key="@string/group_by_key"
        android:persistent="true"
        android:summary="@string/group_by_summary"
        android:title="@string/group_by_title"/>

    <ListPreference
        android:defaultValue="@string/channel_graph_legend_default"
        android:entries="@array/graph_legend_array"
        android:entryValues="@array/graph_legend_index_array"
        android:key="@string/channel_graph_legend_key"
        android:persistent="true"
        android:summary="@string/channel_graph_legend_summary"
        android:title="@string/channel_graph_legend_title"/>

    <ListPreference
        android:defaultValue="@string/time_graph_legend_default"
        android:entries="@array/graph_legend_array"
        android:entryValues="@array/graph_legend_index_array"
        android:key="@string/time_graph_legend_key"
        android:persistent="true"
        android:summary="@string/time_graph_legend_summary"
        android:title="@string/time_graph_legend_title"/>

    <ListPreference
        android:defaultValue="@string/theme_default"
        android:entries="@array/theme_array"
        android:entryValues="@array/theme_index_array"
        android:key="@string/theme_key"
        android:persistent="true"
        android:summary="@string/theme_summary"
        android:title="@string/theme_title"/>

    <chainn.com.wifidetector.settings.StartMenuPreference
        android:key="@string/start_menu_key"
        android:persistent="true"
        android:summary="@string/start_menu_summary"
        android:title="@string/start_menu_title"/>

    <chainn.com.wifidetector.settings.CountryPreference
        android:key="@string/country_code_key"
        android:persistent="true"
        android:summary="@string/country_code_summary"
        android:title="@string/country_code_title"/>

</PreferenceScreen>